# Library-Management-System-Mini

./: .gitignore  C-report.md  CMakeLists.txt  Main.cpp
books/: book.cpp  book.h  book.json  books.cpp  books.json
includes/: b.cpp
index/: Index.cpp  Index.h
pages/: Pages.cpp  Pages.h
records/: record.cpp  record.h  record.json
users/: User.cpp  User.h  user.cpp  user.h  user.json
utils/: EncryptionUtils.cpp  EncryptionUtils.h
